# PokerAI

./: CMakeLists.txt  Makefile  cards.cpp  cards.h  cards2.cpp  cards2.h  controller.cpp  controller.h  data.cpp  data.h  game.cpp  game.h  interface.cpp  interface.h  main  main.cpp  pokerAI.cpp  pokerAI.h
decision/: 0_1.txt  0_10.txt  0_11.txt  0_12.txt  0_13.txt  0_14.txt  0_15.txt  0_16.txt  0_17.txt  0_18.txt  0_19.txt  0_2.txt  0_20.txt  0_21.txt  0_22.txt  0_23.txt  0_24.txt  0_25.txt  0_26.txt  0_27.txt  0_28.txt  0_29.txt  0_3.txt  0_30.txt  0_31.txt  0_32.txt  0_33.txt  0_34.txt  0_35.txt  0_36.txt  0_37.txt  0_38.txt  0_39.txt  0_4.txt  0_40.txt  0_41.txt  0_42.txt  0_43.txt  0_44.txt  0_45.txt  (+1286 more)
